# nes-kotlin-Mobile

./: .gitmodules  README.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  quicknes_jni.cpp
app/src/main/kotlin/com/example/neskotlinmobile/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
